fixed issue with overflow of anchor tag

--- a/src/pages/single-pages/single-pages.scss
+++ b/src/pages/single-pages/single-pages.scss
@@ -67,6 +67,8 @@
 
     #singlepage p{
         width: 100%;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
     }
 }
 
